Update index.html with Solana-style disclaimer and social links

--- a/index.html
+++ b/index.html
@@ -1,72 +1,248 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Businessmind Disclaimer</title>
-  <style>
-    body {
-      background-color: #111;
-      color: #eee;
-      font-family: Arial, sans-serif;
-      line-height: 1.6;
-      padding: 40px;
-      max-width: 800px;
-      margin: auto;
-    }
-    h1 {
-      color: #ffcc00;
-    }
-    h2 {
-      color: #ff6600;
-      margin-top: 40px;
-    }
-    .box {
-      background: #1a1a1a;
-      padding: 20px;
-      border-radius: 8px;
-      margin-bottom: 30px;
-      border-left: 5px solid #ff6600;
-    }
-    footer {
-      margin-top: 40px;
-      font-size: 0.9em;
-      color: #999;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Business‑Main Disclaimer</title>
+    <style>
+        /*
+         * This page uses a colour palette inspired by the Solana ecosystem
+         * to reflect the dark, neon accents of many Solana‑based dApps.
+         */
+        body {
+            margin: 0;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #0a0e23;
+            color: #ffffff;
+            line-height: 1.6;
+        }
+        header {
+            background: linear-gradient(90deg,#9945ff 0%,#14f195 100%);
+            padding: 40px 20px;
+            text-align: center;
+            border-bottom: 2px solid rgba(255, 255, 255, 0.1);
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2rem;
+            line-height: 1.3;
+            color: #0a0e23;
+            font-weight: 700;
+        }
+        header p {
+            margin: 10px 0 0;
+            color: #0a0e23;
+            font-size: 1rem;
+        }
+        .container {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 20px;
+        }
+        .button-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin-top: 20px;
+        }
+        .button-container a {
+            display: inline-block;
+            padding: 12px 20px;
+            border-radius: 6px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: background 0.3s;
+        }
+        .button-container a.x {
+            background-color: #14f195;
+            color: #0a0e23;
+        }
+        .button-container a.telegram {
+            background-color: #9945ff;
+            color: #0a0e23;
+        }
+        .button-container a:hover {
+            opacity: 0.8;
+        }
+        .notice {
+            background-color: #101840;
+            border-left: 4px solid #14f195;
+            padding: 20px;
+            margin: 20px 0;
+            border-radius: 8px;
+        }
+        .notice h2 {
+            margin-top: 0;
+            font-size: 1.3rem;
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            color: #14f195;
+        }
+        .notice h2 .emoji {
+            font-size: 1.5rem;
+        }
+        .notice ul {
+            margin: 10px 0 0 0;
+            padding-left: 20px;
+        }
+        .notice ul li {
+            margin-bottom: 8px;
+        }
+        footer {
+            text-align: center;
+            padding: 20px;
+            font-size: 0.8rem;
+            color: #8e8e8e;
+        }
+    </style>
 </head>
 <body>
-
-  <h1>Disclaimer – Businessmind</h1>
-  <p>This page contains essential risk information for cryptocurrency and memecoin investments. Please read carefully before participating in any digital asset activity.</p>
-
-  <div class="box">
-    <h2>🎭 Important Notice</h2>
-    <p>All content shared should be seen as satire and entertainment only. This is not financial advice. Always DYOR (do your own research).</p>
-  </div>
-
-  <div class="box">
-    <h2>⚠️ High Risk Investment Warning</h2>
-    <p>Crypto and memecoins are highly speculative and volatile. Never invest more than you're willing to lose.</p>
-  </div>
-
-  <div class="box">
-    <h2>🚨 Market Volatility Notice</h2>
-    <ul>
-      <li>Digital assets can experience rapid and unpredictable price changes.</li>
-      <li>Past performance does not guarantee future results.</li>
-      <li>Sudden dumps or rugs can occur at any time.</li>
-    </ul>
-  </div>
-
-  <div class="box">
-    <h2>🧠 For Experienced Traders</h2>
-    <p>This page is made for those who understand the risks. If you're new, seek guidance before trading.</p>
-  </div>
-
-  <footer>
-    &copy; 2025 Businessmind Disclaimer – For educational purposes only. Not financial advice.
-  </footer>
-
+    <header>
+        <h1>Essential Risk Information</h1>
+        <p>for cryptocurrency and memecoin investments</p>
+    </header>
+    <div class="container">
+        <!-- Profile and community links -->
+        <div class="button-container">
+            <!-- TODO: Replace the href values with your actual social links -->
+            <a href="#" class="x">Follow me on X</a>
+            <a href="#" class="telegram">Join our Telegram</a>
+        </div>
+        <!-- Important notice section -->
+        <div class="notice">
+            <h2><span class="emoji">🎭</span> Important Notice</h2>
+            <ul>
+                <li>Everything I post should be viewed as satire and entertainment only. This is not financial advice.</li>
+                <li>You should always do your own research (DYOR) and consult with licensed financial professionals before making any investment decisions.</li>
+                <li>I am not responsible for any financial losses or gains resulting from any information shared.</li>
+            </ul>
+        </div>
+        <!-- High risk investment warning -->
+        <div class="notice">
+            <h2><span class="emoji">⚠️</span> High Risk Investment Warning</h2>
+            <ul>
+                <li>This disclaimer contains critical risk information that could affect your financial decisions.</li>
+            </ul>
+        </div>
+        <!-- Market volatility notice -->
+        <div class="notice">
+            <h2><span class="emoji">🚨</span> Market Volatility Notice</h2>
+            <ul>
+                <li>Digital assets, including cryptocurrencies, often experience rapid and unpredictable price changes.</li>
+                <li>Just because a token did well before doesn’t mean it will again. Some may pump, others may completely crash.</li>
+                <li>Always take time to review project fundamentals before putting any money in.</li>
+            </ul>
+        </div>
+        <!-- Price fluctuations -->
+        <div class="notice">
+            <h2><span class="emoji">📉</span> Price Fluctuations</h2>
+            <ul>
+                <li>The crypto space is extremely reactive to news, regulations, tech updates, and public sentiment.</li>
+                <li>Sudden dumps or spikes are common and can lead to serious financial losses.</li>
+                <li>If you’re unsure, talk to a licensed financial advisor before you invest.</li>
+            </ul>
+        </div>
+        <!-- General risk disclosure -->
+        <div class="notice">
+            <h2><span class="emoji">⚠️</span> General Risk Disclosure</h2>
+            <ul>
+                <li>Crypto carries high risk and comes with no guarantees.</li>
+                <li>You could lose part or all of your investment.</li>
+                <li>The industry faces ongoing issues with scams, security exploits, and market manipulation.</li>
+                <li>Never invest more than you’re prepared to lose, and always DYOR (do your own research).</li>
+            </ul>
+        </div>
+        <!-- About promotional content -->
+        <div class="notice">
+            <h2><span class="emoji">📣</span> About Promotional Content</h2>
+            <ul>
+                <li>Any marketing, sponsored posts, or token shoutouts should not be taken as endorsements or financial advice.</li>
+                <li>Evaluate the source and motives behind promotional messages. Do your own digging before trusting anything.</li>
+            </ul>
+        </div>
+        <!-- Regulatory factors -->
+        <div class="notice">
+            <h2><span class="emoji">📜</span> Regulatory Factors</h2>
+            <ul>
+                <li>Laws around crypto change depending on where you live.</li>
+                <li>Understand the rules in your country before buying, selling, or promoting crypto assets.</li>
+                <li>It’s your responsibility to comply with any regional requirements or reporting obligations.</li>
+            </ul>
+        </div>
+        <!-- Personal accountability -->
+        <div class="notice">
+            <h2><span class="emoji">👤</span> Personal Accountability</h2>
+            <ul>
+                <li>All decisions to invest are made at your own risk.</li>
+                <li>You’re the only one responsible for the outcome of your actions.</li>
+                <li>It’s smart to assess your own financial situation and risk tolerance before jumping into any project.</li>
+            </ul>
+        </div>
+        <!-- No promises or profit guarantees -->
+        <div class="notice">
+            <h2><span class="emoji">❌</span> No Promises or Profit Guarantees</h2>
+            <ul>
+                <li>There’s no promise of gains from anything mentioned here.</li>
+                <li>Past wins don’t predict future performance — losses are always possible.</li>
+                <li>Treat all content here as speculative.</li>
+            </ul>
+        </div>
+        <!-- Not an insider -->
+        <div class="notice">
+            <h2><span class="emoji">🚫</span> Not an Insider</h2>
+            <ul>
+                <li>Unless specifically stated, I have no inside connection to the teams or devs behind any project I talk about.</li>
+                <li>I don’t control project outcomes — I just post and share public info.</li>
+            </ul>
+        </div>
+        <!-- Education only -->
+        <div class="notice">
+            <h2><span class="emoji">📚</span> Education Only</h2>
+            <ul>
+                <li>Everything shared here is meant for learning and awareness — not professional financial guidance.</li>
+                <li>If you’re making big money decisions, consult someone licensed in finance.</li>
+            </ul>
+        </div>
+        <!-- High risk of complete loss -->
+        <div class="notice">
+            <h2><span class="emoji">💀</span> High Risk of Complete Loss</h2>
+            <ul>
+                <li>Especially with memecoins, losing everything is possible — and often happens.</li>
+                <li>These tokens are extremely volatile and often go to zero fast.</li>
+                <li>Only use money you’re okay walking away from.</li>
+            </ul>
+        </div>
+        <!-- Designed for experienced traders -->
+        <div class="notice">
+            <h2><span class="emoji">🧠</span> Designed for Experienced Traders</h2>
+            <ul>
+                <li>This page is made for people who already understand how crypto works.</li>
+                <li>If you’re new here, tread carefully and get help from someone with experience.</li>
+            </ul>
+        </div>
+        <!-- Memecoins specific risk -->
+        <div class="notice">
+            <h2><span class="emoji">🧪</span> Memecoins Specific Risk</h2>
+            <ul>
+                <li>Meme tokens are built around hype and rarely last long. Most die fast and go to zero.</li>
+                <li>Project devs can vanish, launch anonymously, or rug at any moment.</li>
+                <li>Community‑driven hype (especially on Telegram and X) is often exaggerated — don’t take it all literally.</li>
+                <li>Always approach with skepticism. These tokens are not long‑term financial vehicles — they’re speculative entertainment at best.</li>
+            </ul>
+        </div>
+        <!-- Final words -->
+        <div class="notice">
+            <h2><span class="emoji">✅</span> Final Words</h2>
+            <ul>
+                <li>Crypto investing carries real risks. Don’t act on emotion or hype.</li>
+                <li>This page exists to help you stay informed — not to replace real financial advice.</li>
+                <li>Come back and review this regularly. The space moves fast, and so do the risks.</li>
+            </ul>
+        </div>
+    </div>
+    <footer>
+        © 2025 Business‑Main. All rights reserved. This information is provided for educational purposes only and does not constitute financial advice.
+    </footer>
 </body>
 </html>
