Update telegram button text to 'Join my Telegram Alpha Group' and fix footer to Business Mind

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Business‑Main Disclaimer</title>
+    <title>Business Mind Disclaimer</title>
     <style>
         /*
          * This page uses a colour palette inspired by the Solana ecosystem
@@ -105,9 +105,9 @@
     <div class="container">
         <!-- Profile and community links -->
         <div class="button-container">
-            <!-- TODO: Replace the href values with your actual social links -->
-            <a href="#" class="x">Follow me on X</a>
-            <a href="#" class="telegram">Join our Telegram</a>
+            <!-- Social buttons linking to your real accounts -->
+            <a href="https://x.com/_business_mind_?s=21" class="x">Follow me on X</a>
+            <a href="https://t.me/Business_Mind_Alpha" class="telegram">Join my Telegram Alpha Group</a>
         </div>
         <!-- Important notice section -->
         <div class="notice">
@@ -242,7 +242,7 @@
         </div>
     </div>
     <footer>
-        © 2025 Business‑Main. All rights reserved. This information is provided for educational purposes only and does not constitute financial advice.
+        © 2025 Business Mind. All rights reserved. This information is provided for educational purposes only and does not constitute financial advice.
     </footer>
 </body>
 </html>
