--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Business Mind Disclaimer</title>
+    <!-- Load a professional Google Font -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
     <style>
         /*
          * This page uses a colour palette inspired by the Solana ecosystem
@@ -11,28 +13,28 @@
          */
         body {
             margin: 0;
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            /* Use Inter font for a modern, professional look */
+            font-family: 'Inter', sans-serif;
             background-color: #0a0e23;
             color: #ffffff;
             line-height: 1.6;
         }
-        header {
-            background: linear-gradient(90deg,#9945ff 0%,#14f195 100%);
-            padding: 40px 20px;
+        /* Hero section with gradient background and call to action */
+        .hero {
+            background: linear-gradient(90deg, #9945ff 0%, #14f195 100%);
+            padding: 60px 20px;
             text-align: center;
-            border-bottom: 2px solid rgba(255, 255, 255, 0.1);
-        }
-        header h1 {
-            margin: 0;
-            font-size: 2rem;
-            line-height: 1.3;
             color: #0a0e23;
+        }
+        .hero h1 {
+            margin: 0;
+            font-size: 2.5rem;
+            line-height: 1.3;
             font-weight: 700;
         }
-        header p {
-            margin: 10px 0 0;
-            color: #0a0e23;
-            font-size: 1rem;
+        .hero p {
+            margin: 10px 0 20px;
+            font-size: 1.1rem;
         }
         .container {
             max-width: 900px;
@@ -65,11 +67,13 @@
             opacity: 0.8;
         }
         .notice {
-            background-color: #101840;
+            /* Card-like styling for each disclaimer section */
+            background-color: #101a28;
             border-left: 4px solid #14f195;
             padding: 20px;
             margin: 20px 0;
-            border-radius: 8px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
         }
         .notice h2 {
             margin-top: 0;
@@ -89,6 +93,35 @@
         .notice ul li {
             margin-bottom: 8px;
         }
+
+        /* Card component for each disclaimer section */
+        .card {
+            background-color: #101a28;
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.4);
+        }
+        .card h2 {
+            display: flex;
+            align-items: center;
+            font-size: 1.4rem;
+            margin-bottom: 10px;
+            color: #ffffff;
+        }
+        .card h2 .emoji {
+            margin-right: 8px;
+            font-size: 1.4rem;
+        }
+        .card ul {
+            margin: 0;
+            padding-left: 20px;
+            list-style: disc;
+            color: #d0d0d0;
+        }
+        .card ul li {
+            margin-bottom: 8px;
+        }
         footer {
             text-align: center;
             padding: 20px;
@@ -98,17 +131,15 @@
     </style>
 </head>
 <body>
-    <header>
+    <header class="hero">
         <h1>Essential Risk Information</h1>
         <p>for cryptocurrency and memecoin investments</p>
-    </header>
-    <div class="container">
-        <!-- Profile and community links -->
         <div class="button-container">
-            <!-- Social buttons linking to your real accounts -->
             <a href="https://x.com/_business_mind_?s=21" class="x">Follow me on X</a>
             <a href="https://t.me/Business_Mind_Alpha" class="telegram">Join my Telegram Alpha Group</a>
         </div>
+    </header>
+    <div class="container">
         <!-- Important notice section -->
         <div class="notice">
             <h2><span class="emoji">🎭</span> Important Notice</h2>
