Add Axiom Exchange section with navigation and referral link
Added navigation within the drawer to switch between Disclaimer and Axiom Exchange.
Introduced an Axiom Exchange section with partner details, my referral link (axiom.trade/@business) for cashback and fee discounts, and dynamic section switching via JavaScript.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,29 @@
         .drawer .notice {
             margin-bottom: 20px;
         }
+
+        /* Drawer navigation */
+        .drawer-nav {
+            display: flex;
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+        .drawer-nav .nav-link {
+            color: #14f195;
+            text-decoration: none;
+            font-weight: 600;
+            cursor: pointer;
+        }
+        .drawer-nav .nav-link.active {
+            text-decoration: underline;
+        }
+        /* Sections within the drawer */
+        .drawer-section {
+            display: none;
+        }
+        .drawer-section.active {
+            display: block;
+        }
         /* Hero section with gradient background and call to action */
         .hero {
             background: linear-gradient(90deg, #9945ff 0%, #14f195 100%);
@@ -213,6 +236,13 @@
     <!-- Slide-out drawer containing the disclaimer content -->
     <div id="drawer" class="drawer">
         <h2 id="drawer-title" data-i18n="drawer_title">Disclaimer</h2>
+        <!-- Navigation within the drawer to switch between sections -->
+        <nav class="drawer-nav">
+            <a href="#" class="nav-link" data-section="disclaimer" data-i18n="nav_disclaimer">Disclaimer</a>
+            <a href="#" class="nav-link" data-section="axiom" data-i18n="nav_axiom">Axiom Exchange</a>
+        </nav>
+        <!-- Disclaimer section (default) -->
+        <div id="section-disclaimer" class="drawer-section active">
         <!-- Important notice section -->
         <div class="notice" id="important-notice">
             <h2><span class="emoji">🎭</span> <span data-i18n="important_notice_title">Important Notice</span></h2>
@@ -343,16 +373,62 @@
                 <li data-i18n="final_words_2">This page exists to help you stay informed — not to replace real financial advice.</li>
                 <li data-i18n="final_words_3">Come back and review this regularly. The space moves fast, and so do the risks.</li>
             </ul>
-        </div>
-    </div>
+        </div><!-- end of final words notice -->
+        </div><!-- end of disclaimer section -->
+        <!-- Axiom Exchange section -->
+        <div id="section-axiom" class="drawer-section">
+            <div class="notice">
+                <h2><span class="emoji">💼</span> <span data-i18n="axiom_title">Axiom Exchange</span></h2>
+                <p data-i18n="axiom_p1">I am an exclusive partner of Axiom Exchange. Use my referral link to sign up and receive additional cashback on your trades and reduced fees.</p>
+                <p><a href="#" class="x" id="axiom-link" data-i18n="axiom_link_text">Join Axiom Exchange</a></p>
+            </div>
+        </div><!-- end of Axiom section -->
+    </div><!-- end of drawer -->
     <footer>
         © 2025 Business Mind. All rights reserved. This information is provided for educational purposes only and does not constitute financial advice.
     </footer>
     <script>
         // Toggle the disclaimer drawer open and closed
         function toggleDrawer() {
-            document.getElementById('drawer').classList.toggle('open');
+            const drawer = document.getElementById('drawer');
+            drawer.classList.toggle('open');
+            // When opening the drawer, default to showing the disclaimer section
+            if (drawer.classList.contains('open')) {
+                showSection('disclaimer');
+            }
         }
+
+        // Show a specific section within the drawer and update active navigation state
+        function showSection(id) {
+            // Hide all sections
+            document.querySelectorAll('.drawer-section').forEach((section) => {
+                section.classList.remove('active');
+            });
+            // Show the requested section
+            const target = document.getElementById('section-' + id);
+            if (target) {
+                target.classList.add('active');
+            }
+            // Update nav link active state
+            document.querySelectorAll('.drawer-nav .nav-link').forEach((link) => {
+                if (link.getAttribute('data-section') === id) {
+                    link.classList.add('active');
+                } else {
+                    link.classList.remove('active');
+                }
+            });
+        }
+
+        // Bind click handlers for navigation links
+        document.addEventListener('DOMContentLoaded', () => {
+            document.querySelectorAll('.drawer-nav .nav-link').forEach((link) => {
+                link.addEventListener('click', (e) => {
+                    e.preventDefault();
+                    const id = link.getAttribute('data-section');
+                    showSection(id);
+                });
+            });
+        });
 
         /**
          * Simple internationalisation support. Translations are stored
@@ -423,6 +499,11 @@
                 final_words_1: 'Crypto investing carries real risks. Don’t act on emotion or hype.',
                 final_words_2: 'This page exists to help you stay informed — not to replace real financial advice.',
                 final_words_3: 'Come back and review this regularly. The space moves fast, and so do the risks.'
+                ,nav_disclaimer: 'Disclaimer'
+                ,nav_axiom: 'Axiom Exchange'
+                ,axiom_title: 'Axiom Exchange'
+                ,axiom_p1: 'I am an exclusive partner of Axiom Exchange. Use my referral link to sign up and receive additional cashback on your trades and reduced fees.'
+                ,axiom_link_text: 'Join Axiom Exchange'
             },
             de: {
                 hero_title: 'Wichtige Risikoinformationen',
@@ -486,6 +567,11 @@
                 final_words_1: 'Kryptoinvestitionen bergen reale Risiken. Handle nicht aus Emotion oder Hype.',
                 final_words_2: 'Diese Seite dient dazu, dich zu informieren – sie ersetzt keine echte Finanzberatung.',
                 final_words_3: 'Komm regelmäßig zurück und lies dies erneut. Der Markt bewegt sich schnell, und das gilt auch für die Risiken.'
+                ,nav_disclaimer: 'Disclaimer'
+                ,nav_axiom: 'Axiom Exchange'
+                ,axiom_title: 'Axiom Exchange'
+                ,axiom_p1: 'Ich bin exklusiver Partner der Axiom Exchange. Nutze meinen Empfehlungslink, um dich anzumelden, und erhalte zusätzliches Cashback auf deine Trades und reduzierte Gebühren.'
+                ,axiom_link_text: 'Axiom Exchange beitreten'
             }
         };
 
