--- a/index.html
+++ b/index.html
@@ -19,23 +19,73 @@
             color: #ffffff;
             line-height: 1.6;
         }
-        /* Navigation bar for switching between sections */
-        .main-nav {
-            background-color: #101a28;
-            display: flex;
-            justify-content: center;
-            gap: 30px;
-            padding: 15px 0;
-            margin: 0;
+        /* Hamburger menu toggle in the upper right corner */
+        .menu-toggle {
+            position: fixed;
+            top: 20px;
+            right: 20px;
+            width: 30px;
+            height: 22px;
+            cursor: pointer;
+            z-index: 1001;
         }
-        .main-nav a {
+        .menu-toggle span {
+            display: block;
+            height: 3px;
+            background-color: #ffffff;
+            margin-bottom: 5px;
+            border-radius: 3px;
+        }
+        /* Full‑width drawer overlay for navigation and sections */
+        .drawer {
+            position: fixed;
+            top: 0;
+            right: -100%;
+            width: 100%;
+            height: 100%;
+            background-color: #0a0e23;
+            padding: 20px;
+            overflow-y: auto;
+            transition: right 0.3s ease;
+            z-index: 1000;
+        }
+        .drawer.open {
+            right: 0;
+        }
+        .drawer h2 {
+            color: #14f195;
+            margin-top: 0;
+            margin-bottom: 20px;
+        }
+        .drawer .notice {
+            margin-bottom: 20px;
+        }
+        /* Drawer navigation with horizontal orientation */
+        .drawer-nav {
+            display: flex;
+            gap: 20px;
+            margin-bottom: 20px;
+        }
+        .drawer-nav .nav-link {
             color: #14f195;
             text-decoration: none;
             font-weight: 600;
             cursor: pointer;
         }
-        .main-nav a.active {
+        .drawer-nav .nav-link.active {
             text-decoration: underline;
+        }
+        .drawer-section {
+            display: none;
+        }
+        .drawer-section.active {
+            display: block;
+        }
+
+        /* Hide the old navigation bar and content sections since we use a drawer */
+        .main-nav,
+        .content-section {
+            display: none !important;
         }
 
         /* Language selector styles */
@@ -188,6 +238,165 @@
             </select>
         </div>
     </header>
+    <!-- Hamburger menu icon -->
+    <div class="menu-toggle" onclick="toggleDrawer()">
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+
+    <!-- Full-screen drawer containing the navigation and sections -->
+    <div id="drawer" class="drawer">
+        <h2 id="drawer-title" data-i18n="menu_title">Menu</h2>
+        <nav class="drawer-nav">
+            <a href="#" class="nav-link" data-section="disclaimer" data-i18n="nav_disclaimer">Disclaimer</a>
+            <a href="#" class="nav-link" data-section="axiom" data-i18n="nav_axiom">Axiom Exchange</a>
+        </nav>
+        <!-- Disclaimer section inside drawer -->
+        <div id="section-disclaimer" class="drawer-section active">
+            <!-- Important notice section -->
+            <div class="notice" id="important-notice-drawer">
+                <h2><span class="emoji">🎭</span> <span data-i18n="important_notice_title">Important Notice</span></h2>
+                <ul>
+                    <li data-i18n="important_notice_1">Everything I post should be viewed as satire and entertainment only. This is not financial advice.</li>
+                    <li data-i18n="important_notice_2">You should always do your own research (DYOR) and consult with licensed financial professionals before making any investment decisions.</li>
+                    <li data-i18n="important_notice_3">I am not responsible for any financial losses or gains resulting from any information shared.</li>
+                </ul>
+            </div>
+            <!-- High risk investment warning -->
+            <div class="notice" id="high-risk-drawer">
+                <h2><span class="emoji">⚠️</span> <span data-i18n="high_risk_title">High Risk Investment Warning</span></h2>
+                <ul>
+                    <li data-i18n="high_risk_1">This disclaimer contains critical risk information that could affect your financial decisions.</li>
+                </ul>
+            </div>
+            <!-- Market volatility notice -->
+            <div class="notice" id="market-volatility-drawer">
+                <h2><span class="emoji">🚨</span> <span data-i18n="market_volatility_title">Market Volatility Notice</span></h2>
+                <ul>
+                    <li data-i18n="market_volatility_1">Digital assets, including cryptocurrencies, often experience rapid and unpredictable price changes.</li>
+                    <li data-i18n="market_volatility_2">Just because a token did well before doesn’t mean it will again. Some may pump, others may completely crash.</li>
+                    <li data-i18n="market_volatility_3">Always take time to review project fundamentals before putting any money in.</li>
+                </ul>
+            </div>
+            <!-- Price fluctuations -->
+            <div class="notice" id="price-fluctuations-drawer">
+                <h2><span class="emoji">📉</span> <span data-i18n="price_fluctuations_title">Price Fluctuations</span></h2>
+                <ul>
+                    <li data-i18n="price_fluctuations_1">The crypto space is extremely reactive to news, regulations, tech updates, and public sentiment.</li>
+                    <li data-i18n="price_fluctuations_2">Sudden dumps or spikes are common and can lead to serious financial losses.</li>
+                    <li data-i18n="price_fluctuations_3">If you’re unsure, talk to a licensed financial advisor before you invest.</li>
+                </ul>
+            </div>
+            <!-- General risk disclosure -->
+            <div class="notice" id="general-risk-drawer">
+                <h2><span class="emoji">⚠️</span> <span data-i18n="general_risk_title">General Risk Disclosure</span></h2>
+                <ul>
+                    <li data-i18n="general_risk_1">Crypto carries high risk and comes with no guarantees.</li>
+                    <li data-i18n="general_risk_2">You could lose part or all of your investment.</li>
+                    <li data-i18n="general_risk_3">The industry faces ongoing issues with scams, security exploits, and market manipulation.</li>
+                    <li data-i18n="general_risk_4">Never invest more than you’re prepared to lose, and always DYOR (do your own research).</li>
+                </ul>
+            </div>
+            <!-- About promotional content -->
+            <div class="notice" id="promo-content-drawer">
+                <h2><span class="emoji">📣</span> <span data-i18n="promo_content_title">About Promotional Content</span></h2>
+                <ul>
+                    <li data-i18n="promo_content_1">Any marketing, sponsored posts, or token shoutouts should not be taken as endorsements or financial advice.</li>
+                    <li data-i18n="promo_content_2">Evaluate the source and motives behind promotional messages. Do your own digging before trusting anything.</li>
+                </ul>
+            </div>
+            <!-- Regulatory factors -->
+            <div class="notice" id="regulatory-factors-drawer">
+                <h2><span class="emoji">📜</span> <span data-i18n="regulatory_factors_title">Regulatory Factors</span></h2>
+                <ul>
+                    <li data-i18n="regulatory_factors_1">Laws around crypto change depending on where you live.</li>
+                    <li data-i18n="regulatory_factors_2">Understand the rules in your country before buying, selling, or promoting crypto assets.</li>
+                    <li data-i18n="regulatory_factors_3">It’s your responsibility to comply with any regional requirements or reporting obligations.</li>
+                </ul>
+            </div>
+            <!-- Personal accountability -->
+            <div class="notice" id="personal-accountability-drawer">
+                <h2><span class="emoji">👤</span> <span data-i18n="personal_accountability_title">Personal Accountability</span></h2>
+                <ul>
+                    <li data-i18n="personal_accountability_1">All decisions to invest are made at your own risk.</li>
+                    <li data-i18n="personal_accountability_2">You’re the only one responsible for the outcome of your actions.</li>
+                    <li data-i18n="personal_accountability_3">It’s smart to assess your own financial situation and risk tolerance before jumping into any project.</li>
+                </ul>
+            </div>
+            <!-- No promises or profit guarantees -->
+            <div class="notice" id="no-promises-drawer">
+                <h2><span class="emoji">❌</span> <span data-i18n="no_promises_title">No Promises or Profit Guarantees</span></h2>
+                <ul>
+                    <li data-i18n="no_promises_1">There’s no promise of gains from anything mentioned here.</li>
+                    <li data-i18n="no_promises_2">Past wins don’t predict future performance — losses are always possible.</li>
+                    <li data-i18n="no_promises_3">Treat all content here as speculative.</li>
+                </ul>
+            </div>
+            <!-- Not an insider -->
+            <div class="notice" id="not-insider-drawer">
+                <h2><span class="emoji">🚫</span> <span data-i18n="not_insider_title">Not an Insider</span></h2>
+                <ul>
+                    <li data-i18n="not_insider_1">Unless specifically stated, I have no inside connection to the teams or devs behind any project I talk about.</li>
+                    <li data-i18n="not_insider_2">I don’t control project outcomes — I just post and share public info.</li>
+                </ul>
+            </div>
+            <!-- Education only -->
+            <div class="notice" id="education-only-drawer">
+                <h2><span class="emoji">📚</span> <span data-i18n="education_only_title">Education Only</span></h2>
+                <ul>
+                    <li data-i18n="education_only_1">Everything shared here is meant for learning and awareness — not professional financial guidance.</li>
+                    <li data-i18n="education_only_2">If you’re making big money decisions, consult someone licensed in finance.</li>
+                </ul>
+            </div>
+            <!-- High risk of complete loss -->
+            <div class="notice" id="complete-loss-drawer">
+                <h2><span class="emoji">💀</span> <span data-i18n="complete_loss_title">High Risk of Complete Loss</span></h2>
+                <ul>
+                    <li data-i18n="complete_loss_1">Especially with memecoins, losing everything is possible — and often happens.</li>
+                    <li data-i18n="complete_loss_2">These tokens are extremely volatile and often go to zero fast.</li>
+                    <li data-i18n="complete_loss_3">Only use money you’re okay walking away from.</li>
+                </ul>
+            </div>
+            <!-- Designed for experienced traders -->
+            <div class="notice" id="experienced-traders-drawer">
+                <h2><span class="emoji">🧠</span> <span data-i18n="experienced_traders_title">Designed for Experienced Traders</span></h2>
+                <ul>
+                    <li data-i18n="experienced_traders_1">This page is made for people who already understand how crypto works.</li>
+                    <li data-i18n="experienced_traders_2">If you’re new here, tread carefully and get help from someone with experience.</li>
+                </ul>
+            </div>
+            <!-- Memecoins specific risk -->
+            <div class="notice" id="memecoins-specific-drawer">
+                <h2><span class="emoji">🧪</span> <span data-i18n="memecoins_specific_title">Memecoins Specific Risk</span></h2>
+                <ul>
+                    <li data-i18n="memecoins_specific_1">Meme tokens are built around hype and rarely last long. Most die fast and go to zero.</li>
+                    <li data-i18n="memecoins_specific_2">Project devs can vanish, launch anonymously, or rug at any moment.</li>
+                    <li data-i18n="memecoins_specific_3">Community‑driven hype (especially on Telegram and X) is often exaggerated — don’t take it all literally.</li>
+                    <li data-i18n="memecoins_specific_4">Always approach with skepticism. These tokens are not long‑term financial vehicles — they’re speculative entertainment at best.</li>
+                </ul>
+            </div>
+            <!-- Final words -->
+            <div class="notice" id="final-words-drawer">
+                <h2><span class="emoji">✅</span> <span data-i18n="final_words_title">Final Words</span></h2>
+                <ul>
+                    <li data-i18n="final_words_1">Crypto investing carries real risks. Don’t act on emotion or hype.</li>
+                    <li data-i18n="final_words_2">This page exists to help you stay informed — not to replace real financial advice.</li>
+                    <li data-i18n="final_words_3">Come back and review this regularly. The space moves fast, and so do the risks.</li>
+                </ul>
+            </div>
+        </div><!-- end of disclaimer section in drawer -->
+        <!-- Axiom Exchange section inside drawer -->
+        <div id="section-axiom" class="drawer-section">
+            <div class="notice">
+                <h2><span class="emoji">💼</span> <span data-i18n="axiom_title">Axiom Exchange</span></h2>
+                <!-- Detailed description of Axiom Exchange in multiple paragraphs -->
+                <p data-i18n="axiom_p1"></p>
+                <p data-i18n="axiom_p2"></p>
+                <p><a href="https://axiom.trade/@business" target="_blank" class="x" id="axiom-link" data-i18n="axiom_link_text">Join Axiom Exchange</a></p>
+            </div>
+        </div><!-- end of Axiom section in drawer -->
+    </div><!-- end of drawer -->
     <!-- Main navigation for sections -->
     <nav class="main-nav">
         <a href="#" class="nav-link" data-section="disclaimer" data-i18n="nav_disclaimer">Disclaimer</a>
@@ -341,10 +550,20 @@
         © 2025 Business Mind. All rights reserved. This information is provided for educational purposes only and does not constitute financial advice.
     </footer>
     <script>
-        // Show a specific section and update active navigation state
+        // Toggle the drawer open and closed
+        function toggleDrawer() {
+            const drawer = document.getElementById('drawer');
+            drawer.classList.toggle('open');
+            // When opening the drawer, default to showing the disclaimer section
+            if (drawer.classList.contains('open')) {
+                showSection('disclaimer');
+            }
+        }
+
+        // Show a specific section within the drawer and update active navigation state
         function showSection(id) {
-            // Hide all content sections
-            document.querySelectorAll('.content-section').forEach((section) => {
+            // Hide all sections in the drawer
+            document.querySelectorAll('.drawer-section').forEach((section) => {
                 section.classList.remove('active');
             });
             // Show the requested section
@@ -353,7 +572,7 @@
                 target.classList.add('active');
             }
             // Update nav link active state
-            document.querySelectorAll('.main-nav .nav-link').forEach((link) => {
+            document.querySelectorAll('.drawer-nav .nav-link').forEach((link) => {
                 if (link.getAttribute('data-section') === id) {
                     link.classList.add('active');
                 } else {
@@ -362,9 +581,9 @@
             });
         }
 
-        // Bind click handlers for navigation links
+        // Bind click handlers for navigation links inside the drawer
         document.addEventListener('DOMContentLoaded', () => {
-            document.querySelectorAll('.main-nav .nav-link').forEach((link) => {
+            document.querySelectorAll('.drawer-nav .nav-link').forEach((link) => {
                 link.addEventListener('click', (e) => {
                     e.preventDefault();
                     const id = link.getAttribute('data-section');
@@ -446,6 +665,7 @@
                 final_words_3: 'Come back and review this regularly. The space moves fast, and so do the risks.'
                 ,nav_disclaimer: 'Disclaimer'
                 ,nav_axiom: 'Axiom Exchange'
+                ,menu_title: 'Menu'
                 ,axiom_title: 'Axiom Exchange'
                 ,axiom_p1: 'Axiom Exchange is a full-featured, non-custodial trading platform on Solana that lets you buy, sell and manage your tokens all in one place. With lightning-fast order execution (limit orders land in ≤ 1 block), wallet and Twitter tracking, a migration sniper for migrating tokens, and MEV-resistant infrastructure, Axiom provides deep liquidity and powerful tools for both beginners and pros.'
                 ,axiom_p2: 'You can earn up to 15% APY on idle funds via MarginFi integration and buy crypto without KYC thanks to our partnership with Coinbase. Our 3-tier referral program lets you earn 30% of Axiom’s net fee on direct referrals, 3% on level 2 and 2% on level 3; anyone signing up through your link saves 10% on trading fees. Join with my exclusive link to receive extra cashback and fee discounts!'
@@ -515,6 +735,7 @@
                 final_words_3: 'Komm regelmäßig zurück und lies dies erneut. Der Markt bewegt sich schnell, und das gilt auch für die Risiken.'
                 ,nav_disclaimer: 'Disclaimer'
                 ,nav_axiom: 'Axiom Exchange'
+                ,menu_title: 'Menü'
                 ,axiom_title: 'Axiom Exchange'
                 ,axiom_p1: 'Axiom Exchange ist eine voll ausgestattete, nicht-kustodiale Handelsplattform auf Solana, mit der du Token kaufen, verkaufen und verwalten kannst – alles an einem Ort. Dank blitzschneller Auftragsausführung (Limit Orders landen innerhalb von ≤ 1 Block), Wallet- und Twitter-Tracking, einem Migrations-Sniper für migrierende Token und einer MEV-resistenten Infrastruktur bietet Axiom tiefe Liquidität und leistungsstarke Werkzeuge für Anfänger und Profis.'
                 ,axiom_p2: 'Du kannst auf deine ungenutzten Mittel bis zu 15 % APY über die Integration mit MarginFi verdienen und dank unserer Partnerschaft mit Coinbase ohne KYC Krypto kaufen. Unser dreistufiges Empfehlungsprogramm belohnt dich mit 30 % der Netto-Gebühren auf direkte Empfehlungen, 3 % auf Level 2 und 2 % auf Level 3; jeder, der sich über deinen Link registriert, erhält 10 % Rabatt auf die Handelsgebühren. Nutze meinen exklusiven Link, um zusätzliches Cashback und Fee-Rabatte zu erhalten!'
