Revamp navigation: side drawer opens on click and shows sections full-screen; update Axiom call-to-action (affiliate 30% commission) and make Axiom link open in new tab

--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@
                 <!-- Detailed description of Axiom Exchange in multiple paragraphs -->
                 <p data-i18n="axiom_p1"></p>
                 <p data-i18n="axiom_p2"></p>
-                <p><a href="https://axiom.trade/@business" class="x" id="axiom-link" data-i18n="axiom_link_text">Join Axiom Exchange</a></p>
+                <p><a href="https://axiom.trade/@business" target="_blank" class="x" id="axiom-link" data-i18n="axiom_link_text">Join Axiom Exchange</a></p>
             </div>
         </div><!-- end of Axiom section -->
     <footer>
@@ -668,7 +668,7 @@
                 ,menu_title: 'Menu'
                 ,axiom_title: 'Axiom Exchange'
                 ,axiom_p1: 'Axiom Exchange is a full-featured, non-custodial trading platform on Solana that lets you buy, sell and manage your tokens all in one place. With lightning-fast order execution (limit orders land in ≤ 1 block), wallet and Twitter tracking, a migration sniper for migrating tokens, and MEV-resistant infrastructure, Axiom provides deep liquidity and powerful tools for both beginners and pros.'
-                ,axiom_p2: 'You can earn up to 15% APY on idle funds via MarginFi integration and buy crypto without KYC thanks to our partnership with Coinbase. Our 3-tier referral program lets you earn 30% of Axiom’s net fee on direct referrals, 3% on level 2 and 2% on level 3; anyone signing up through your link saves 10% on trading fees. Join with my exclusive link to receive extra cashback and fee discounts!'
+                ,axiom_p2: 'You can earn up to 15% APY on idle funds via MarginFi integration and buy crypto without KYC thanks to our partnership with Coinbase. Our 3‑tier referral program gives 30% of Axiom’s net fees on direct referrals, 3% on level 2 and 2% on level 3, and new users registering with my link get 10% off trading fees. Because I’m an exclusive partner, I can also upgrade you to an affiliate account so you can earn up to 30% commission yourself — more cashback and fee rebates for everyone!'
                 ,axiom_link_text: 'Join Axiom Exchange'
             },
             de: {
@@ -738,7 +738,7 @@
                 ,menu_title: 'Menü'
                 ,axiom_title: 'Axiom Exchange'
                 ,axiom_p1: 'Axiom Exchange ist eine voll ausgestattete, nicht-kustodiale Handelsplattform auf Solana, mit der du Token kaufen, verkaufen und verwalten kannst – alles an einem Ort. Dank blitzschneller Auftragsausführung (Limit Orders landen innerhalb von ≤ 1 Block), Wallet- und Twitter-Tracking, einem Migrations-Sniper für migrierende Token und einer MEV-resistenten Infrastruktur bietet Axiom tiefe Liquidität und leistungsstarke Werkzeuge für Anfänger und Profis.'
-                ,axiom_p2: 'Du kannst auf deine ungenutzten Mittel bis zu 15 % APY über die Integration mit MarginFi verdienen und dank unserer Partnerschaft mit Coinbase ohne KYC Krypto kaufen. Unser dreistufiges Empfehlungsprogramm belohnt dich mit 30 % der Netto-Gebühren auf direkte Empfehlungen, 3 % auf Level 2 und 2 % auf Level 3; jeder, der sich über deinen Link registriert, erhält 10 % Rabatt auf die Handelsgebühren. Nutze meinen exklusiven Link, um zusätzliches Cashback und Fee-Rabatte zu erhalten!'
+                ,axiom_p2: 'Du kannst auf deine ungenutzten Mittel bis zu 15 % APY über die Integration mit MarginFi verdienen und dank unserer Partnerschaft mit Coinbase ohne KYC Krypto kaufen. Unser dreistufiges Empfehlungsprogramm zahlt 30 % der Netto-Gebühren für direkte Empfehlungen, 3 % auf Stufe 2 und 2 % auf Stufe 3; wer sich über meinen Link registriert, erhält 10 % Rabatt auf die Handelsgebühren. Als exklusiver Partner kann ich dich außerdem zum Affiliate machen, sodass du selbst bis zu 30 % Provision verdienen kannst — noch mehr Cashback und Gebührenrabatte für alle!'
                 ,axiom_link_text: 'Axiom Exchange beitreten'
             }
         };
